<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res/net.yihabits.artwork"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#FFF">
	<ScrollView android:id="@+id/scrollView1"
		android:orientation="vertical" android:layout_width="fill_parent"  android:gravity="center_horizontal|top" 
		android:layout_height="fill_parent" android:fillViewport="true" android:background="#000">
		<LinearLayout android:id="@+id/mainLayout" 
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Gallery android:id="@+id/gallery1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
				<TableLayout android:layout_height="wrap_content" android:id="@+id/detailsPanel" android:layout_width="fill_parent">
			<TableRow android:id="@+id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:text="@string/name" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFF" android:textSize="20dp"></TextView>
		 	<TextView android:text="" android:id="@+id/nameLbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:text="@string/author" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
				<TextView android:text="" android:id="@+id/authorLbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow3" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:text="@string/details" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
				<TextView android:text="" android:id="@+id/detailsLbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow4" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:text="@string/year" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
				<TextView android:text="" android:id="@+id/yearLbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow5" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:text="@string/location" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
				<TextView android:text="" android:id="@+id/locationLbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textColor="#FFF" android:textSize="20dp"></TextView>
			</TableRow>
		</TableLayout>
				<net.yihabits.artwork.MyScrollView android:id="@+id/myscroll" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="#000">
			<ImageSwitcher android:id="@+id/switcher1"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal|top" 
				 />
				 </net.yihabits.artwork.MyScrollView>
		</LinearLayout>
	</ScrollView>
	<LinearLayout android:id="@+id/downloadPanel"
			android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#FFF" android:gravity="center">
		<ProgressBar android:id="@+id/progressBar1" android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge" android:layout_width="wrap_content"></ProgressBar>
	<TextView android:text="@string/wait" android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#000"
		android:textSize="20dp"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/btn_layout" android:layout_height="wrap_content"
		android:gravity="right|center_vertical" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
		android:layout_alignTop="@+id/home_layout" android:layout_marginTop="100dp"  >
		<Button android:text="" android:id="@+id/detailsBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/ic_menu_category" ></Button>
		<LinearLayout android:layout_height="fill_parent" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:gravity="right">
			<Button android:text="" android:id="@+id/zoomBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/zoom_in_48" ></Button>
		</LinearLayout>
		
		</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/ad_layout" android:layout_height="wrap_content"
		android:gravity="bottom" android:layout_alignParentBottom="true"
		android:layout_alignBottom="@+id/home_layout">
	</LinearLayout>
</RelativeLayout>
